// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Autocomplete Regular 1`] = `
<div
  style={
    Object {
      "width": "200px",
    }
  }
>
  <div
    className="undefined"
  >
    <div>
      <input
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        placeholder="Oh, fruity fruit."
        type="text"
        value="Blueberries"
      />
      <ul>
        <li
          aria-selected={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
        >
          Blueberries
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots Avatar With Gradient Seed 1`] = `
<div
  selected="B1"
  setSelected={[Function]}
>
  <div
    style={
      Object {
        "width": "45px",
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "background": "linear-gradient(315deg, rgb(55,105,230) 0%, rgb(179,164,244) 100%)",
        }
      }
    >
      <span>
        KT
      </span>
    </div>
  </div>
  <br />
  <div
    style={
      Object {
        "width": "32px",
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "background": "linear-gradient(315deg, rgb(185,68,218) 0%, rgb(238,170,217) 100%)",
        }
      }
    >
      <span>
        CC
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Avatar With Icon 1`] = `
<div
  selected="B1"
  setSelected={[Function]}
>
  <div
    style={
      Object {
        "width": "45px",
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "backgroundColor": "#5644D8",
        }
      }
    >
      <i
        className="fa fa-paper-plane"
      />
    </div>
  </div>
  <br />
  <div
    style={
      Object {
        "width": "45px",
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "backgroundColor": "#7BC4A9",
        }
      }
    >
      <i
        className="fa fa-clock"
      />
    </div>
  </div>
  <br />
  <div
    style={
      Object {
        "width": "45px",
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "backgroundColor": "#18a8d8",
        }
      }
    >
      <i
        className="fab fa-salesforce"
      />
    </div>
  </div>
  <br />
  <div
    style={
      Object {
        "width": "45px",
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "backgroundColor": "#c14800",
        }
      }
    >
      <i
        className="fab fa-magento"
      />
    </div>
  </div>
  <br />
  <div
    style={
      Object {
        "width": "32px",
      }
    }
  >
    <div
      className="undefined"
      style={
        Object {
          "backgroundColor": "#5644D8",
        }
      }
    >
      <i
        className="fa fa-paper-plane"
      />
    </div>
  </div>
  <br />
  <div
    style={
      Object {
        "width": "32px",
      }
    }
  >
    <div
      className="undefined"
      style={
        Object {
          "backgroundColor": "#7BC4A9",
        }
      }
    >
      <i
        className="fa fa-clock"
      />
    </div>
  </div>
  <br />
  <div
    style={
      Object {
        "width": "32px",
      }
    }
  >
    <div
      className="undefined"
      style={
        Object {
          "backgroundColor": "#18a8d8",
        }
      }
    >
      <i
        className="fab fa-salesforce"
      />
    </div>
  </div>
  <br />
  <div
    style={
      Object {
        "width": "32px",
      }
    }
  >
    <div
      className="undefined"
      style={
        Object {
          "backgroundColor": "#c14800",
        }
      }
    >
      <i
        className="fab fa-magento"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Avatar With Image 1`] = `
<div
  selected="B1"
  setSelected={[Function]}
>
  <div
    style={
      Object {
        "width": "45px",
      }
    }
  >
    <div
      className=""
      style={Object {}}
    >
      <img
        className=""
        onError={[Function]}
        onLoad={[Function]}
      />
    </div>
  </div>
  <br />
  <div
    style={
      Object {
        "width": "45px",
      }
    }
  >
    <div
      className=""
      style={Object {}}
    >
      <img
        className=""
        onError={[Function]}
        onLoad={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Avatar With User 1`] = `
<div
  selected="B1"
  setSelected={[Function]}
>
  <small>
    User with avatar, name, email and phone number - should show avatar
  </small>
  <div
    style={
      Object {
        "width": "45px",
      }
    }
  >
    <div
      className=""
      style={Object {}}
    >
      <img
        alt="John Doe"
        className=""
        onError={[Function]}
        onLoad={[Function]}
      />
    </div>
  </div>
  <br />
  <small>
    User with name, email and phone number - should print "JD".
  </small>
  <div
    style={
      Object {
        "width": "45px",
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "background": "linear-gradient(315deg, rgb(55,105,230) 0%, rgb(179,164,244) 100%)",
        }
      }
    >
      <span>
        JD
      </span>
    </div>
  </div>
  <br />
  <small>
    User with email and phone number - should print "JG".
  </small>
  <div
    style={
      Object {
        "width": "45px",
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "background": "linear-gradient(315deg, rgb(55,105,230) 0%, rgb(179,164,244) 100%)",
        }
      }
    >
      <span>
        jg
      </span>
    </div>
  </div>
  <br />
  <small>
    User with only phone number - should print "31".
  </small>
  <div
    style={
      Object {
        "width": "45px",
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "background": "linear-gradient(315deg, rgb(55,105,230) 0%, rgb(179,164,244) 100%)",
        }
      }
    >
      <span>
        31
      </span>
    </div>
  </div>
  <br />
  <h6>
    Anonymous - only id
  </h6>
  <div
    style={
      Object {
        "width": "45px",
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "background": "#CACACA",
        }
      }
    >
      <i
        className="fa fa-user-secret"
      />
    </div>
  </div>
  <br />
  <h6>
    Unassigned
  </h6>
  <div
    style={
      Object {
        "width": "45px",
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "background": "#CACACA",
        }
      }
    >
      <i
        className="fa fa-user-slash"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Chart Regular 1`] = `
<div
  selected="B1"
  setSelected={[Function]}
>
  <div
    className=""
  >
    <span>
      10
    </span>
    <svg
      height={72}
      width={72}
    >
      <circle
        cx={36}
        cy={36}
        fill="none"
        r={30}
        stroke="#FF9430"
        strokeDasharray="19.86254575504611 168.63301346034146"
        strokeDashoffset={47.12388980384689}
        strokeWidth={12}
      />
      <circle
        cx={36}
        cy={36}
        fill="none"
        r={30}
        stroke="#46DB75"
        strokeDasharray="79.45018302018444 109.04537619520313"
        strokeDashoffset={27.261344048800783}
        strokeWidth={12}
      />
      <circle
        cx={36}
        cy={36}
        fill="none"
        r={30}
        stroke="#00A9FF"
        strokeDasharray="31.581447750523317 156.91411146486425"
        strokeDashoffset={-52.18883897138367}
        strokeWidth={12}
      />
      <circle
        cx={36}
        cy={36}
        fill="none"
        r={30}
        stroke="#D53341"
        strokeDasharray="57.60138268963371 130.89417652575386"
        strokeDashoffset={-83.770286721907}
        strokeWidth={12}
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Score Regular 1`] = `
<div
  selected="B1"
  setSelected={[Function]}
>
  <div
    className=""
    style={
      Object {
        "--circle-circumference": 194.77874452256717,
        "--circle-percentage": 165.56193284418208,
      }
    }
  >
    <svg
      fill="none"
      height={72}
      width={72}
    >
      <circle
        cx={36}
        cy={36}
        r={31}
        strokeWidth={10}
      />
      <circle
        cx={36}
        cy={36}
        r={31}
        stroke="#0cce6b"
        strokeWidth={10}
        transform="rotate(-90 36 36)"
      />
    </svg>
    <span
      aria-label="score"
    >
      85
    </span>
  </div>
</div>
`;

exports[`Storyshots Spinner Regular 1`] = `
<div
  selected="B1"
  setSelected={[Function]}
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="undefined"
    style={
      Object {
        "borderTopColor": undefined,
        "borderWidth": "3px",
        "height": "32px",
        "width": "32px",
      }
    }
  />
  <br />
  <div
    className="undefined"
    style={
      Object {
        "borderTopColor": "#00cc00",
        "borderWidth": "3px",
        "height": "32px",
        "width": "32px",
      }
    }
  />
  <br />
  <div
    className="undefined"
    style={
      Object {
        "borderTopColor": "tomato",
        "borderWidth": "3px",
        "height": "32px",
        "width": "32px",
      }
    }
  />
</div>
`;
